force-app/main/default/objects/Deposit_Slip__c/Deposit_Slip__c.object-meta.xml
<CustomObject>
    <description>View the deposit slips for today generated in previous step/tab - &quot;Generate Deposit Slip&quot;</description>
    <label>Deposit Slip</label>
    <nameField>
        <displayFormat>DS-{000}</displayFormat>
        <label>Deposit Slip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Slips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>