force-app/main/default/objects/Deposit_Slip__c/fields/A1LP_394_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>A1LP_394_Total_Amount__c</fullName>
    <label>FIM - 810 Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>