force-app/main/default/objects/Deposit_Slip__c/fields/A1LP_394_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>A1LP_394_Total_Cheque__c</fullName>
    <label>FIM - 810 Total # Cheque</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>