force-app/main/default/objects/Deposit_Slip__c/fields/AAL_375_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>AAL_375_Total_Cheque__c</fullName>
    <label>CIHI - 877 - 1 Total # Cheque</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>