force-app/main/default/objects/Deposit_Slip__c/fields/ACQ_618_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACQ_618_Total_Amount__c</fullName>
    <label>ACQ - 618 Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>