force-app/main/default/objects/Deposit_Slip__c/fields/ACQ_618_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>ACQ_618_Total_Cheque__c</fullName>
    <label>ACQ - 618 Total # Cheque</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>