force-app/main/default/objects/Deposit_Slip__c/fields/AFSI_631_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>AFSI_631_Total_Amount__c</fullName>
    <label>AFSI - 631 Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>