force-app/main/default/objects/Deposit_Slip__c/fields/AFSI_631_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>AFSI_631_Total_Cheque__c</fullName>
    <label>AFSI - 631 Total # Cheque</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>