force-app/main/default/objects/Deposit_Slip__c/fields/CAL_767_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CAL_767_Total_Amount__c</fullName>
    <label>CAL - 767 Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>