force-app/main/default/objects/Deposit_Slip__c/fields/CAL_767_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>CAL_767_Total_Cheque__c</fullName>
    <label>CAL - 767 Total # Cheque</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>