force-app/main/default/objects/Deposit_Slip__c/fields/CCLP_130_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CCLP_130_Total_Amount__c</fullName>
    <label>CCLP - 130 Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>