force-app/main/default/objects/Deposit_Slip__c/fields/CCLP_130_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>CCLP_130_Total_Cheque__c</fullName>
    <label>CCLP - 130 Total # Cheque</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>