force-app/main/default/objects/Deposit_Slip__c/fields/CFL_602_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CFL_602_Total_Amount__c</fullName>
    <description>Total amount on the CFL - 602 cheques</description>
    <inlineHelpText>Total amount on the CFL - 602 cheques</inlineHelpText>
    <label>CFL - 602 Total Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>