force-app/main/default/objects/Deposit_Slip__c/fields/CFL_602_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>CFL_602_Total_Cheque__c</fullName>
    <description>Total number of cheques for CFL - 602</description>
    <inlineHelpText>Total number of cheques for CFL - 602</inlineHelpText>
    <label>CFL - 602 Total # Cheque</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>