force-app/main/default/objects/Deposit_Slip__c/fields/CIAL_457_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CIAL_457_Total_Amount__c</fullName>
    <label>CIHI - 877 - 2 Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>