force-app/main/default/objects/Deposit_Slip__c/fields/CIML_156_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CIML_156_Total_Amount__c</fullName>
    <label>CIML - 156 Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>