force-app/main/default/objects/Deposit_Slip__c/fields/CIML_156_Total_Cheque__c.field-meta.xml
<CustomField>
    <fullName>CIML_156_Total_Cheque__c</fullName>
    <label>CIML - 156 Total # Cheque</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>