force-app/main/default/objects/Deposit_Slip__c/fields/Total_Fortress_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Fortress_Accounts__c</fullName>
    <label>Total Fortress Accounts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>