force-app/main/default/objects/Deposit_Slip__c/fields/Total_Fortress_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Fortress_Amount__c</fullName>
    <label>Total Fortress Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>