force-app/main/default/objects/Deposit_Slip__c/recordTypes/CCS_Deposit_Slip.recordType-meta.xml
<RecordType>
    <fullName>CCS_Deposit_Slip</fullName>
    <active>true</active>
    <description>Deposit slip for CCS</description>
    <label>CCS Deposit Slip</label>
</RecordType>