force-app/main/default/objects/Deposit_Slip__c/recordTypes/Insolvency_Deposit_Slip.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Deposit_Slip</fullName>
    <active>true</active>
    <description>Deposit Slip for Insolvency</description>
    <label>Insolvency Deposit Slip</label>
</RecordType>