force-app/main/default/objects/Deposit_Slip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>CCS_CFG_BS</group>
        <group>CCS_CFG_User</group>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
        <group>Insolvency_Canaccede_Users</group>
    </sharedTo>
</ListView>