force-app/main/default/objects/Deposit_Slip__c/listViews/CCS_Deposit_Slips.listView-meta.xml
<ListView>
    <fullName>CCS_Deposit_Slips</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Deposit_Slip__c.CCS_Deposit_Slip</value>
    </filters>
    <label>CCS Deposit Slips</label>
    <sharedTo>
        <group>CCS_CFG_BS</group>
        <group>CCS_CFG_User</group>
    </sharedTo>
</ListView>