force-app/main/default/objects/Deposit_Slip__c/listViews/Insolvency_Deposit_Slips.listView-meta.xml
<ListView>
    <fullName>Insolvency_Deposit_Slips</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Deposit_Slip__c.Insolvency_Deposit_Slip</value>
    </filters>
    <label>Insolvency Deposit Slips</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
        <group>Insolvency_Canaccede_Users</group>
    </sharedTo>
</ListView>